# besiq

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  README.md
.cmake/modules/: FindArmadillo.cmake  FindPlinkIo.cmake
data/: dataset.bed  dataset.bim  dataset.fam  dataset.pair
examples/: test.cov
experiments/: README  covariates.example.json  lireich.json  method.json  models.example.json  run_experiment.py  specific.json
experiments/cluster_tools/: divide_on_cluster.sh  divide_on_cluster_bin.sh  run_bayesic.sh  run_bayesic_bin.sh
experiments/env/: env.py  env_single.sh
experiments/experiment_tools/: compile.sh  compile_all.sh  env_multiple.sh  env_power.sh  env_power_single.sh  env_single.sh  run_all.sh  run_experiment.sh  run_null.sh
experiments/explib/: fdr_power.py  plinkdata.py  plot.py  power.py  program.py
experiments/run_experiment/: run_experiment.py
experiments/types/: all.example.json  anril.example.json  dominant.example.json  models.example.json  null.example.json  roc.example.json  roc_few.example.json  sample_size.example.json  sindep.example.json  sufficient_models.example.json
libs/: CMakeLists.txt
libs/bayesic/: CMakeLists.txt  correct.cpp  correct.hpp  covariates.cpp  covariates.hpp  misc.cpp  model_matrix.cpp  model_matrix.hpp  pair_iter.cpp  pair_iter.hpp  pairfile.cpp  pairfile.hpp  prior.cpp  prior.hpp  resultfile.cpp  resultfile.hpp
libs/bayesic/env_method/: lm_env_stepwise.cpp  lm_env_stepwise.hpp
libs/bayesic/io/: covariates.cpp  covariates.hpp  metaresult.cpp  metaresult.hpp  misc.cpp  pairfile.cpp  pairfile.hpp  resultfile.cpp  resultfile.hpp
libs/bayesic/method/: bayes_fast.cpp  bayes_fast.hpp  bayesic_fine_method.cpp  bayesic_fine_method.hpp  bayesic_method.cpp  bayesic_method.hpp  boxcox_method.cpp  boxcox_method.hpp  caseonly_method.cpp  caseonly_method.hpp  env_method.cpp  env_method.hpp  glm_factor_method.cpp  glm_factor_method.hpp  glm_method.cpp  glm_method.hpp  glm_tukey_method.cpp  glm_tukey_method.hpp  lm_factor_method.cpp  lm_factor_method.hpp  lm_method.cpp  lm_method.hpp  lm_stepwise_method.cpp  lm_stepwise_method.hpp  logistic_factor_method.cpp  logistic_factor_method.hpp  logistic_method.cpp  logistic_method.hpp  loglinear_method.cpp  loglinear_method.hpp  method.cpp  method.hpp  peer_method.cpp  peer_method.hpp  scaleinv_method.cpp  scaleinv_method.hpp  stagewise_method.cpp  stagewise_method.hpp  stepwise_method.cpp  stepwise_method.hpp  (+4 more)
libs/bayesic/stats/: bayesic_models.cpp  bayesic_models.hpp  beta.cpp  binomial_models.cpp  binomial_models.hpp  closed_form_models.hpp  dirichlet.cpp  dirichlet.hpp  log_scale.hpp  loglinear_models.cpp  loglinear_models.hpp  normal_models.cpp  normal_models.hpp  snp_count.cpp  snp_count.hpp  stepwise_models.cpp  stepwise_models.hpp
libs/besiq/: CMakeLists.txt  config.h.in  correct.cpp  correct.hpp  logp_grid.cpp  logp_grid.hpp  model_matrix.cpp  model_matrix.hpp  prior.cpp  prior.hpp
libs/besiq/env_method/: lm_env_stepwise.cpp  lm_env_stepwise.hpp
libs/besiq/io/: covariates.cpp  covariates.hpp  metaresult.cpp  metaresult.hpp  misc.cpp  misc.hpp  pairfile.cpp  pairfile.hpp  resultfile.cpp  resultfile.hpp
libs/besiq/method/: bayes_fast.cpp  bayes_fast.hpp  besiq_fine_method.cpp  besiq_fine_method.hpp  besiq_method.cpp  besiq_method.hpp  boxcox_method.cpp  boxcox_method.hpp  caseonly_method.cpp  caseonly_method.hpp  env_method.cpp  env_method.hpp  glm_method.cpp  glm_method.hpp  loglinear_method.cpp  loglinear_method.hpp  method.cpp  method.hpp  peer_method.cpp  peer_method.hpp  scaleinv_method.cpp  scaleinv_method.hpp  separate_method.cpp  separate_method.hpp  stagewise_method.cpp  stagewise_method.hpp  wald_lm_method.cpp  wald_lm_method.hpp  wald_method.cpp  wald_method.hpp  wald_separate_method.cpp  wald_separate_method.hpp
libs/besiq/stats/: besiq_models.cpp  besiq_models.hpp  beta.cpp  beta.hpp  binomial_models.cpp  binomial_models.hpp  closed_form_models.hpp  dirichlet.cpp  dirichlet.hpp  log_scale.hpp  normal_models.cpp  normal_models.hpp  snp_count.cpp  snp_count.hpp
libs/cpp-argparse/: CMakeLists.txt  OptionParser.h
libs/dcdflib/: CMakeLists.txt  dcdflib.c  ipmpar.c  libdcdf.cpp  libdcdf.hpp
libs/glm/: CMakeLists.txt  glm.cpp  glm.hpp  glm_info.hpp  irls.cpp  irls.hpp  lm.cpp  lm.hpp
libs/glm/models/: binomial.cpp  binomial.hpp  glm_model.hpp  logcomplement.cpp  logcomplement.hpp  normal.cpp  normal.hpp  odds_additive.cpp  odds_additive.hpp  penetrance_additive.cpp  penetrance_additive.hpp  penetrance_multiplicative.cpp  penetrance_multiplicative.hpp
libs/glm/models/links/: glm_link.cpp  glm_link.hpp  identity.cpp  identity.hpp  log.cpp  log.hpp  logc.cpp  logc.hpp  logit.cpp  logit.hpp  odds.cpp  odds.hpp  power.cpp  power.hpp  power_odds.cpp  power_odds.hpp
libs/gzstream/: CMakeLists.txt  gzstream.cpp  gzutil.cpp  gzutil.hpp
libs/plink/: CMakeLists.txt  imputed.cpp  imputed.hpp  plink_file.cpp  plink_file.hpp  snp_row.cpp  snp_row.hpp
snakemake/: besiq.rule
snakemake/example/: Snakefile  cluster.json  experiments.json
src/: CMakeLists.txt  bayesic.cpp  bayesic_bayes.cpp  bayesic_caseonly.cpp  bayesic_correct.cpp  bayesic_env.cpp  bayesic_glm.cpp  bayesic_loglinear.cpp  bayesic_pairs.cpp  bayesic_scaleinv.cpp  bayesic_stagewise.cpp  bayesic_view.cpp  bayesic_wald.cpp  besiq.cpp  besiq_bayes.cpp  besiq_caseonly.cpp  besiq_correct.cpp  besiq_env.cpp  besiq_extract.cpp  besiq_glm.cpp  besiq_gxe.cpp  besiq_imputed.cpp  besiq_lars.cpp  besiq_loglinear.cpp  besiq_meta.cpp  besiq_mglm.cpp  besiq_pairs.cpp  besiq_predict.cpp  besiq_predict_lm.cpp  besiq_scaleinv.cpp  besiq_separate.cpp  besiq_stagewise.cpp  besiq_var.cpp  besiq_view.cpp  besiq_wald.cpp  common_options.cpp  common_options.hpp  gene_environment.cpp  gene_environment.hpp  generate_pairs.cpp
tests/: CMakeLists.txt  bayesic_models_test.cpp  count_test.cpp  covariate_test.cpp  dirichlet_test.cpp  irls_test.cpp  log_scale_test.cpp  snp_row_test.cpp
tools/closed_correction/: closed_correction.py
tools/generate_ped/: generate_all.py  generate_covariate_ped.py  generate_env.py  (+6 more)
(+34 files in other folders)
